--- a/recipes/grilled_ribs.html
+++ b/recipes/grilled_ribs.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grilled Ribs</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Grilled Ribs</h1>
-</body>
+    <img
+      src="../images/grilled_ribs.jpg"
+      alt="grilled_ribs"
+      style="width: 600px; height: 600px"
+    />">
+    <h2>Sticky Grilled Ribs</h2>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+      architecto dolorem hic, praesentium ad aperiam deleniti eos quo, quia
+      ratione doloribus accusamus numquam aut facere minima eum harum fugit
+      consectetur?
+    </p>
+    <h3>Ingredients</h3>
+    <ul>
+      <li>4 teaspoons kosher salt</li>
+      <li>4 teaspoons white sugar</li>
+      <li>1 teaspoon freshly ground black pepper</li>
+      <li>1 teaspoon paprika</li>
+      <li>1 teaspoon garlic powder</li>
+      <li>2 racks baby back pork ribs</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+      <li>Preheat the oven to 250 degrees F (120 degrees C).</li>
+    </ol>
+  </body>
 </html>
