Add steps for recipe

--- a/recipes/grilled_ribs.html
+++ b/recipes/grilled_ribs.html
@@ -32,6 +32,39 @@
     <h3>Steps</h3>
     <ol>
       <li>Preheat the oven to 250 degrees F (120 degrees C).</li>
+      <li>
+        Mix salt, sugar, black pepper, paprika, and garlic powder for dry rub
+        together in a small bowl. Set aside.
+      </li>
+      <li>
+        Line a large sheet pan with heavy-duty aluminum foil. Place rack of ribs
+        on the prepared pan, bone side down. Poke all over with a sharp knife.
+        Make shallow slits across at an angle, and then repeat the opposite way;
+        this allows the dry rub to penetrate. Coat on both sides with rub; flip
+        back over, ensuring the bone side is down. Wrap tightly with foil.
+      </li>
+      <li>
+        Transfer to the center of the preheated oven and bake for 2 hours.
+        Remove from the oven and let cool to room temperature. Refrigerate until
+        cold and firm, at least 2 hours, up to overnight.
+      </li>
+      <li>Preheat a charcoal grill until coals are very ashy and hot.</li>
+      <li>
+        Remove from the refrigerator, unwrap, and brush off excess fat. Slice
+        between the bones to separate each rib.
+      </li>
+      <li>
+        Combine ketchup, brown sugar, soy sauce, vinegar, oil, and cayenne with
+        a spoon in a bowl for glaze.
+      </li>
+      <li>
+        Place ribs on the preheated grill and cook for 2 minutes; flip and brush
+        over glaze. Flip and repeat process until ribs are as caramelized as you
+        prefer, about 10 minutes more.
+      </li>
+      <li>
+        Remove to a plate and brush over one more application of glaze. Serve.
+      </li>
     </ol>
   </body>
 </html>
