--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Odin Recipes</h1>
-    <a href="grilled_ribs.html">Grilled Ribs</a>
-</body>
+    <h3>Collection of Recipes</h3>
+    <ul>
+      <li><a href="recipes/grilled_ribs.html">Grilled Ribs</a></li>
+    </ul>
+  </body>
 </html>
