--- a/recipes/grilled_ribs.html
+++ b/recipes/grilled_ribs.html
@@ -21,14 +21,28 @@
       consectetur?
     </p>
     <h3>Ingredients</h3>
-    <ul>
-      <li>4 teaspoons kosher salt</li>
-      <li>4 teaspoons white sugar</li>
-      <li>1 teaspoon freshly ground black pepper</li>
-      <li>1 teaspoon paprika</li>
-      <li>1 teaspoon garlic powder</li>
-      <li>2 racks baby back pork ribs</li>
-    </ul>
+    <div>
+      <h4>For the Ribs</h4>
+      <ul>
+        <li>4 teaspoons kosher salt</li>
+        <li>4 teaspoons white sugar</li>
+        <li>1 teaspoon freshly ground black pepper</li>
+        <li>1 teaspoon paprika</li>
+        <li>1 teaspoon garlic powder</li>
+        <li>2 racks baby back pork ribs</li>
+      </ul>
+    </div>
+    <div>
+        <h4>For the Glaze</h4>
+      <ul>
+        <li>⅓ cup ketchup</li>
+        <li>¼ cup brown sugar</li>
+        <li>2 tablespoons soy sauce</li>
+        <li>2 tablespoons rice vinegar</li>
+        <li>1 tablespoon vegetable oil</li>
+        <li>1 pinch cayenne pepper</li>
+      </ul>
+    </div>
     <h3>Steps</h3>
     <ol>
       <li>Preheat the oven to 250 degrees F (120 degrees C).</li>
