--- a/recipes/grilled_ribs.html
+++ b/recipes/grilled_ribs.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grilled Ribs</title>
   </head>
+  <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <body>
     <h1>Grilled Ribs</h1>
     <img
@@ -21,7 +22,7 @@
       consectetur?
     </p>
     <h3>Ingredients</h3>
-    <div>
+    <div class="left">
       <h4>For the Ribs</h4>
       <ul>
         <li>4 teaspoons kosher salt</li>
@@ -32,8 +33,8 @@
         <li>2 racks baby back pork ribs</li>
       </ul>
     </div>
-    <div>
-        <h4>For the Glaze</h4>
+    <div class="right">
+      <h4>For the Glaze</h4>
       <ul>
         <li>⅓ cup ketchup</li>
         <li>¼ cup brown sugar</li>
