--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Odin Recipes</h1>
     <h3>Collection of Recipes</h3>
     <ul>
-      <li><a href="recipes/grilled_ribs.html">Grilled Ribs</a></li>
+      <li><a href="recipes/grilled-ribs.html">Grilled Ribs</a></li>
     </ul>
   </body>
 </html>
