--- a/recipes/grilled-ribs.html
+++ b/recipes/grilled-ribs.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Grilled Ribs</h1>
     <img
-      src="../images/grilled_ribs.jpg"
+      src="../images/grilled-ribs.jpg"
       alt="grilled_ribs"
       style="width: 600px; height: 600px"
     />">
