--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h3>Collection of Recipes</h3>
     <ul>
       <li><a href="recipes/grilled-ribs.html">Grilled Ribs</a></li>
+      <li><a href="recipes/milk-steak.html">Milk Steak</a></li>
     </ul>
   </body>
 </html>
