Add description of milk steak

--- a/recipes/milk-steak.html
+++ b/recipes/milk-steak.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Charlie's Milk Steak</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Charlie's Milk Steak</h1>
-    <img src="../images/milk-steak.jpg" alt="milk steak">
-</body>
+    <img src="../images/milk-steak.jpg" alt="milk steak" />
+    <h2>A scrumptious steak dinner, best served with free-range jelly beans</h2>
+    <p>
+      The preferred meal of Charlie Kelly, from "It's Always Sunny in
+      Philidelphia".
+    </p>
+    <p>
+      Only the <em>finest</em> cuts of beef should be used, and is delicious
+      when served immediately, or after fermenting in the trash for a week.
+    </p>
+  </body>
 </html>
