Add ingredients list to milk steak

--- a/recipes/milk-steak.html
+++ b/recipes/milk-steak.html
@@ -18,5 +18,13 @@
       Only the <em>finest</em> cuts of beef should be used, and is delicious
       when served immediately, or after fermenting in the trash for a week.
     </p>
+    <div>
+        <h4>Ingredients</h4>
+        <ul>
+            <li>Beef cut of choice (Wagyu or Kobe is ideal)</li>
+            <li>Cow milk, fresh and unpasteurized</li>
+            <li>(Optional) Free range, cruelty-free jelly beans</li>
+        </ul>
+    </div>
   </body>
 </html>
