--- a/recipes/milk-steak.html
+++ b/recipes/milk-steak.html
@@ -19,12 +19,25 @@
       when served immediately, or after fermenting in the trash for a week.
     </p>
     <div>
-        <h4>Ingredients</h4>
-        <ul>
-            <li>Beef cut of choice (Wagyu or Kobe is ideal)</li>
-            <li>Cow milk, fresh and unpasteurized</li>
-            <li>(Optional) Free range, cruelty-free jelly beans</li>
-        </ul>
+      <h4>Ingredients</h4>
+      <ul>
+        <li>Beef cut of choice (Wagyu or Kobe is ideal)</li>
+        <li>Cow milk, fresh and unpasteurized</li>
+        <li>(Optional) Free range, cruelty-free jelly beans</li>
+      </ul>
+      <div>
+        <h4>Recipe instructions</h4>
+        <ol>
+          <li>Bring fresh milk to a roaring boil</li>
+          <li>Tear apart beef into palatable chunks with your hands</li>
+          <li>Immediately pour beef chunks into boiling milk</li>
+          <li>Let beef boil for at least 18 hours, until boiled over hard</li>
+          <li>
+            Remove beef from milk, and serve on your finest china with a side of
+            raw jelly beans
+          </li>
+        </ol>
+      </div>
     </div>
   </body>
 </html>
