Add link to return to homepage

--- a/recipes/grilled-ribs.html
+++ b/recipes/grilled-ribs.html
@@ -81,5 +81,6 @@
         Remove to a plate and brush over one more application of glaze. Serve.
       </li>
     </ol>
+    <a href="../index.html">Return to main page</a>
   </body>
 </html>
