--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <h3>Collection of Recipes</h3>
-    <ul>
-      <li><a href="recipes/grilled-ribs.html">Grilled Ribs</a></li>
-      <li><a href="recipes/milk-steak.html">Milk Steak</a></li>
-    </ul>
+    <div class="container">
+      <h3>Collection of Recipes</h3>
+      <div class="list">
+        <ul>
+          <li><a href="recipes/grilled-ribs.html">Grilled Ribs</a></li>
+          <li><a href="recipes/milk-steak.html">Milk Steak</a></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
