--- a/recipes/grilled-ribs.html
+++ b/recipes/grilled-ribs.html
@@ -9,78 +9,81 @@
   <link rel="stylesheet" type="text/css" href="../css/style.css" />
   <body>
     <h1>Grilled Ribs</h1>
-    <img
-      src="../images/grilled-ribs.jpg"
-      alt="grilled_ribs"
-      style="width: 600px; height: 600px"
-    />">
-    <h2>Sticky Grilled Ribs</h2>
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
-      architecto dolorem hic, praesentium ad aperiam deleniti eos quo, quia
-      ratione doloribus accusamus numquam aut facere minima eum harum fugit
-      consectetur?
-    </p>
-    <h3>Ingredients</h3>
-    <div class="left">
-      <h4>For the Ribs</h4>
-      <ul>
-        <li>4 teaspoons kosher salt</li>
-        <li>4 teaspoons white sugar</li>
-        <li>1 teaspoon freshly ground black pepper</li>
-        <li>1 teaspoon paprika</li>
-        <li>1 teaspoon garlic powder</li>
-        <li>2 racks baby back pork ribs</li>
-      </ul>
+    <div class="container">
+      <img
+        src="../images/grilled-ribs.jpg"
+        alt="grilled_ribs"
+        class="recipe_image"
+      />
+      <h2>Sticky Grilled Ribs</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Beatae
+        architecto dolorem hic, praesentium ad aperiam deleniti eos quo, quia
+        ratione doloribus accusamus numquam aut facere minima eum harum fugit
+        consectetur?
+      </p>
+      <h3>Ingredients</h3>
+      <div class="left">
+        <h4>For the Ribs</h4>
+        <ul>
+          <li>4 teaspoons kosher salt</li>
+          <li>4 teaspoons white sugar</li>
+          <li>1 teaspoon freshly ground black pepper</li>
+          <li>1 teaspoon paprika</li>
+          <li>1 teaspoon garlic powder</li>
+          <li>2 racks baby back pork ribs</li>
+        </ul>
+      </div>
+      <div class="right">
+        <h4>For the Glaze</h4>
+        <ul>
+          <li>⅓ cup ketchup</li>
+          <li>¼ cup brown sugar</li>
+          <li>2 tablespoons soy sauce</li>
+          <li>2 tablespoons rice vinegar</li>
+          <li>1 tablespoon vegetable oil</li>
+          <li>1 pinch cayenne pepper</li>
+        </ul>
+      </div>
+      <h3>Steps</h3>
+      <ol>
+        <li>Preheat the oven to 250 degrees F (120 degrees C).</li>
+        <li>
+          Mix salt, sugar, black pepper, paprika, and garlic powder for dry rub
+          together in a small bowl. Set aside.
+        </li>
+        <li>
+          Line a large sheet pan with heavy-duty aluminum foil. Place rack of
+          ribs on the prepared pan, bone side down. Poke all over with a sharp
+          knife. Make shallow slits across at an angle, and then repeat the
+          opposite way; this allows the dry rub to penetrate. Coat on both sides
+          with rub; flip back over, ensuring the bone side is down. Wrap tightly
+          with foil.
+        </li>
+        <li>
+          Transfer to the center of the preheated oven and bake for 2 hours.
+          Remove from the oven and let cool to room temperature. Refrigerate
+          until cold and firm, at least 2 hours, up to overnight.
+        </li>
+        <li>Preheat a charcoal grill until coals are very ashy and hot.</li>
+        <li>
+          Remove from the refrigerator, unwrap, and brush off excess fat. Slice
+          between the bones to separate each rib.
+        </li>
+        <li>
+          Combine ketchup, brown sugar, soy sauce, vinegar, oil, and cayenne
+          with a spoon in a bowl for glaze.
+        </li>
+        <li>
+          Place ribs on the preheated grill and cook for 2 minutes; flip and
+          brush over glaze. Flip and repeat process until ribs are as
+          caramelized as you prefer, about 10 minutes more.
+        </li>
+        <li>
+          Remove to a plate and brush over one more application of glaze. Serve.
+        </li>
+      </ol>
     </div>
-    <div class="right">
-      <h4>For the Glaze</h4>
-      <ul>
-        <li>⅓ cup ketchup</li>
-        <li>¼ cup brown sugar</li>
-        <li>2 tablespoons soy sauce</li>
-        <li>2 tablespoons rice vinegar</li>
-        <li>1 tablespoon vegetable oil</li>
-        <li>1 pinch cayenne pepper</li>
-      </ul>
-    </div>
-    <h3>Steps</h3>
-    <ol>
-      <li>Preheat the oven to 250 degrees F (120 degrees C).</li>
-      <li>
-        Mix salt, sugar, black pepper, paprika, and garlic powder for dry rub
-        together in a small bowl. Set aside.
-      </li>
-      <li>
-        Line a large sheet pan with heavy-duty aluminum foil. Place rack of ribs
-        on the prepared pan, bone side down. Poke all over with a sharp knife.
-        Make shallow slits across at an angle, and then repeat the opposite way;
-        this allows the dry rub to penetrate. Coat on both sides with rub; flip
-        back over, ensuring the bone side is down. Wrap tightly with foil.
-      </li>
-      <li>
-        Transfer to the center of the preheated oven and bake for 2 hours.
-        Remove from the oven and let cool to room temperature. Refrigerate until
-        cold and firm, at least 2 hours, up to overnight.
-      </li>
-      <li>Preheat a charcoal grill until coals are very ashy and hot.</li>
-      <li>
-        Remove from the refrigerator, unwrap, and brush off excess fat. Slice
-        between the bones to separate each rib.
-      </li>
-      <li>
-        Combine ketchup, brown sugar, soy sauce, vinegar, oil, and cayenne with
-        a spoon in a bowl for glaze.
-      </li>
-      <li>
-        Place ribs on the preheated grill and cook for 2 minutes; flip and brush
-        over glaze. Flip and repeat process until ribs are as caramelized as you
-        prefer, about 10 minutes more.
-      </li>
-      <li>
-        Remove to a plate and brush over one more application of glaze. Serve.
-      </li>
-    </ol>
     <a href="../index.html">Return to main page</a>
   </body>
 </html>
