--- a/recipes/milk-steak.html
+++ b/recipes/milk-steak.html
@@ -5,38 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Charlie's Milk Steak</title>
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <h1>Charlie's Milk Steak</h1>
-    <img src="../images/milk-steak.jpg" alt="milk steak" />
-    <h2>A scrumptious steak dinner, best served with free-range jelly beans</h2>
-    <p>
-      The preferred meal of Charlie Kelly, from "It's Always Sunny in
-      Philidelphia".
-    </p>
-    <p>
-      Only the <em>finest</em> cuts of beef should be used, and is delicious
-      when served immediately, or after fermenting in the trash for a week.
-    </p>
-    <div>
-      <h4>Ingredients</h4>
-      <ul>
-        <li>Beef cut of choice (Wagyu or Kobe is ideal)</li>
-        <li>Cow milk, fresh and unpasteurized</li>
-        <li>(Optional) Free range, cruelty-free jelly beans</li>
-      </ul>
+    <div class="container">
+      <img
+        src="../images/milk-steak.jpg"
+        alt="milk steak"
+        class="recipe_image"
+      />
+      <h2>
+        A scrumptious steak dinner, best served with free-range jelly beans
+      </h2>
+      <p>
+        The preferred meal of Charlie Kelly, from "It's Always Sunny in
+        Philidelphia".
+      </p>
+      <p>
+        Only the <em>finest</em> cuts of beef should be used, and is delicious
+        when served immediately, or after fermenting in the trash for a week.
+      </p>
       <div>
-        <h4>Recipe instructions</h4>
-        <ol>
-          <li>Bring fresh milk to a roaring boil</li>
-          <li>Tear apart beef into palatable chunks with your hands</li>
-          <li>Immediately pour beef chunks into boiling milk</li>
-          <li>Let beef boil for at least 18 hours, until boiled over hard</li>
-          <li>
-            Remove beef from milk, and serve on your finest china with a side of
-            raw jelly beans
-          </li>
-        </ol>
+        <h3>Ingredients</h3>
+        <ul>
+          <li>Beef cut of choice (Wagyu or Kobe is ideal)</li>
+          <li>Cow milk, fresh and unpasteurized</li>
+          <li>(Optional) Free range, cruelty-free jelly beans</li>
+        </ul>
+        <div>
+          <h3>Recipe instructions</h3>
+          <ol>
+            <li>Bring fresh milk to a roaring boil</li>
+            <li>Tear apart beef into palatable chunks with your hands</li>
+            <li>Immediately pour beef chunks into boiling milk</li>
+            <li>Let beef boil for at least 18 hours, until boiled over hard</li>
+            <li>
+              Remove beef from milk, and serve on your finest china with a side
+              of raw jelly beans
+            </li>
+          </ol>
+        </div>
       </div>
     </div>
     <a href="../index.html">Return to main page</a>
